kubernetes/apps/metrics/kube-prometheus/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics-kube-prometheus-route
  namespace: traefik
spec:
  parentRefs:
    - name: cluster-edge-gateway
      namespace: traefik
  hostnames:
    - metrics.kwer.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      filters:
        #   - type: ExtensionRef
        #     extensionRef:
        #       group: traefik.io
        #       kind: Middleware
        #       name: strip-first-segment
        #       namespace: traefik
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: metrics-basic-auth
      backendRefs:
        - name: prometheus-operated
          port: 9090
          namespace: metrics
